# egui-mcp

./: .envrc  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Cargo.toml  README.md  cliff.toml  devenv.nix  devenv.yaml  justfile  release-plz.toml
.github/workflows/: ci.yml  release-binary.yml  release-plz.yml
crates/egui-mcp-client/: CHANGELOG.md  Cargo.toml
crates/egui-mcp-client/src/: lib.rs  log_layer.rs  server.rs  tree.rs
crates/egui-mcp-protocol/: CHANGELOG.md  Cargo.toml
crates/egui-mcp-protocol/src/: lib.rs
crates/egui-mcp-server/: CHANGELOG.md  Cargo.toml
crates/egui-mcp-server/src/: atspi_client.rs  constants.rs  errors.rs  guide.rs  ipc_client.rs  main.rs  requests.rs  uia_client.rs  utils.rs
crates/egui-mcp-server/src/tools/: action.rs  basic.rs  component.rs  highlight.rs  input.rs  logging.rs  mod.rs  perf.rs  screenshot.rs  selection.rs  snapshot.rs  state.rs  text.rs  tree.rs  value.rs  wait.rs
docs/: ROADMAP.md  atspi-proxies-issue.md  egui-accessibility-investigation.md  egui-accessibility-pr.md
examples/demo-app/: Cargo.toml
examples/demo-app/src/: main.rs
