[workspace]
resolver = "2"
members = [
    "crates/egui-mcp-server",
    "crates/egui-mcp-client",
    "crates/egui-mcp-protocol",
    "examples/demo-app",
]

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dijdzv/egui-mcp"

[workspace.dependencies]
# MCP
rmcp = { version = "0.13", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Accessibility
accesskit = "0.21"

# GUI
egui = "0.33"
eframe = { version = "0.33", default-features = false }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

# JSON Schema
schemars = "0.8"

# Internal crates
egui-mcp-protocol = { path = "crates/egui-mcp-protocol", version = "0.0.2" }
egui-mcp-client = { path = "crates/egui-mcp-client", version = "0.0.2" }

