[package]
name = "egui-mcp-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Library to embed in egui apps for MCP integration"

[dependencies]
egui-mcp-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
accesskit = { workspace = true }
egui = { workspace = true }
