[package]
name = "egui-mcp-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Common protocol definitions for egui-mcp"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
accesskit = { workspace = true }
thiserror = { workspace = true }
