[package]
name = "demo-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Demo egui application for testing egui-mcp"

[[bin]]
name = "demo-app"
path = "src/main.rs"

[dependencies]
egui-mcp-client = { workspace = true }
egui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
accesskit = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }

# Platform-specific eframe configuration (Wayland only on Linux for WSL2)
# NOTE: accesskit disabled on Linux due to glutin config issues on WSLg
[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "wayland"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
eframe = { workspace = true, features = ["accesskit"] }
