[package]
name = "demo-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Demo egui application for testing egui-mcp"

[[bin]]
name = "demo-app"
path = "src/main.rs"

[dependencies]
egui-mcp-client = { workspace = true }
egui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
image = { workspace = true }

# Platform-specific eframe configuration (Wayland only on Linux for WSL2)
[target.'cfg(target_os = "linux")'.dependencies]
eframe = { workspace = true, default-features = false, features = ["default_fonts", "glow", "wayland", "accesskit"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
eframe = { workspace = true, features = ["accesskit"] }
